workspaces/mohantr/slurm-14388830.out
Lmod has detected the following error: The following module(s) are unknown: "modtree/cpu"

Please check the spelling or version number. Also try "module spider ..."
It is also possible your cache file is out-of-date; it may help to try:
  $ module --ignore_cache load "modtree/cpu"

Also make sure that all modulefiles written in TCL start with the string #%Module



  File "/anvil/projects/x-cis220051/corporate/aerospace-rf/mohantr/BaseModel.py", line 5
    !pip install git+https://github.com/the-aerospace-corporation/radiomana.git
    ^
SyntaxError: invalid syntax
